fix z-index commit

--- a/css/style_rooms.css
+++ b/css/style_rooms.css
@@ -87,7 +87,7 @@ img {
   position: fixed;
   top: 0;
   left: 100%;
-  background: black;
+  background: white;
   width: 100%;
   height: 100%;
   z-index: 100;
