--- a/global_scss/_burger.scss
+++ b/global_scss/_burger.scss
@@ -3,7 +3,7 @@
 	position: fixed;
 	top: 0;
 	left: 100%;
-	background: black;
+	background: white;
 	width: 100%;
 	height: 100%;
 	z-index: 100;
